Fixed schedule spacing

--- a/edificios/edificio-a/styles.css
+++ b/edificios/edificio-a/styles.css
@@ -335,6 +335,10 @@ html {
     cursor: pointer;
 }
 
+.schedule-spacing {
+    margin-bottom: 1.5vh;
+}
+
 /* Footer */
 
 .navbar-fixed-bottom {
